# oop-cpp-hw

./: CMakeLists.txt  main.cpp  plane.cpp  plane.h  rnd.cpp  rnd.h  ship.h  test_generation.cpp  test_generation.h  train.h  transport.cpp  transport.h
program/: container.cpp  container.h  plane.h  ship.cpp  ship.h  timer.cpp  timer.h  train.cpp  train.h
program/tests/test_input/correct/: test2.txt  test3.txt
program/tests/test_output/: out1.txt
